--- a/style.css
+++ b/style.css
@@ -8,8 +8,24 @@ body {
     /* align-items: center; */
     margin-left: 38%;
     margin-top: 50px;
-    /* background-color: aquamarine; */
+    background-color: aquamarine;
 }
+
+div h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    margin-top: 5px;
+    color:blue;
+}
+
+
+div,img{
+    max-width: 58%;
+    max-height: 30%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
 
 h2,#date{
     font-family: sans-serif;
@@ -22,20 +38,4 @@ h3 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color:blue ;
     font-size: 20px;
-}
-
-div h1{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    margin-top: 5px;
-    color:blue ;
-
-}
-
-
-div,img{
-    max-width: 58%;
-    max-height: 30%;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
 }
